# ParametrPackFunnctions

./: Makefile  README.md
src/: CMakeLists.txt  main.cpp
src/MyMetaFunctions/: is_same.hpp  just_type.hpp  type_pack.hpp
